[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/icons/titanium.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/dust.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/godot_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/unused/alert-circle.png" type="Texture" id=4]
[ext_resource path="res://prefabs/ui/game/game_ui.gd" type="Script" id=6]
[ext_resource path="res://prefabs/ui/game/debug/debug.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/icons/cog.png" type="Texture" id=9]


[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" parent="." instance=ExtResource( 7 )]
visible = false
margin_top = 0.0
margin_right = 96.0
margin_bottom = 184.0

[node name="Resources" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 36.0
custom_constants/margin_top = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Resources"]
margin_top = 12.0
margin_right = 960.0
margin_bottom = 36.0
custom_constants/separation = 24
alignment = 1

[node name="Titanium" type="HBoxContainer" parent="Resources/HBoxContainer"]
margin_left = 416.0
margin_right = 468.0
margin_bottom = 24.0

[node name="Value" type="Label" parent="Resources/HBoxContainer/Titanium"]
margin_top = 5.0
margin_right = 24.0
margin_bottom = 19.0
text = "123"

[node name="Icon" type="TextureRect" parent="Resources/HBoxContainer/Titanium"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="Dust" type="HBoxContainer" parent="Resources/HBoxContainer"]
margin_left = 492.0
margin_right = 544.0
margin_bottom = 24.0

[node name="Icon" type="TextureRect" parent="Resources/HBoxContainer/Dust"]
margin_right = 24.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )

[node name="Value" type="Label" parent="Resources/HBoxContainer/Dust"]
margin_left = 28.0
margin_top = 5.0
margin_right = 52.0
margin_bottom = 19.0
text = "123"

[node name="MainMenu" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFPS" type="Label" parent="MainMenu"]
margin_top = 17.0
margin_right = 24.0
margin_bottom = 31.0
text = "123"

[node name="BtnGameMenu" type="TextureButton" parent="MainMenu"]
margin_left = 28.0
margin_right = 76.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
mouse_filter = 1
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="SelectionOverlay" type="VBoxContainer" parent="."]
grow_horizontal = 2
rect_min_size = Vector2( 1000, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedEntity" type="HBoxContainer" parent="SelectionOverlay"]
margin_right = 1000.0
margin_bottom = 24.0
alignment = 1

[node name="PreviousEntities" type="HBoxContainer" parent="SelectionOverlay/SelectedEntity"]
margin_right = 462.0
margin_bottom = 24.0
size_flags_horizontal = 3
alignment = 2

[node name="TextureRect" type="TextureRect" parent="SelectionOverlay/SelectedEntity/PreviousEntities"]
margin_left = 410.0
margin_right = 434.0
margin_bottom = 24.0
texture = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="SelectionOverlay/SelectedEntity/PreviousEntities"]
margin_left = 438.0
margin_right = 462.0
margin_bottom = 24.0
texture = ExtResource( 4 )

[node name="SelectedEntity" type="HBoxContainer" parent="SelectionOverlay/SelectedEntity"]
margin_left = 466.0
margin_right = 534.0
margin_bottom = 24.0

[node name="VSeparator2" type="VSeparator" parent="SelectionOverlay/SelectedEntity/SelectedEntity"]
margin_right = 4.0
margin_bottom = 24.0

[node name="EntityTypeIcon" type="TextureRect" parent="SelectionOverlay/SelectedEntity/SelectedEntity"]
margin_left = 8.0
margin_right = 32.0
margin_bottom = 24.0
texture = ExtResource( 3 )

[node name="EntityHealth" type="Label" parent="SelectionOverlay/SelectedEntity/SelectedEntity"]
margin_left = 36.0
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
rect_min_size = Vector2( 24, 0 )
text = "123"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="SelectionOverlay/SelectedEntity/SelectedEntity"]
margin_left = 64.0
margin_right = 68.0
margin_bottom = 24.0

[node name="NextEntities" type="HBoxContainer" parent="SelectionOverlay/SelectedEntity"]
margin_left = 538.0
margin_right = 1000.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="SelectionOverlay/SelectedEntity/NextEntities"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 4 )

[node name="UserActions" type="HBoxContainer" parent="SelectionOverlay"]
margin_top = 28.0
margin_right = 1000.0
margin_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 24 )
alignment = 1

[connection signal="mouse_entered" from="MainMenu/BtnGameMenu" to="." method="_on_mouse_entered_ui"]
[connection signal="mouse_exited" from="MainMenu/BtnGameMenu" to="." method="_on_mouse_exited_ui"]
[connection signal="pressed" from="MainMenu/BtnGameMenu" to="." method="_on_game_menu"]
